<resources>
    <string name="app_name">NPPump</string>
    <string name="np_v1_0">NP-V1.0</string>
    <string name="npsetting">NP泵参数设置</string>
    <string name="gjbb">固件版本</string>
    <string name="pleaseinput">请输入</string>
    <string name="djbh">电机保护</string>
    <string name="djbh_dw">mA</string>
    <string name="ryxs_dw">10uL/P</string>
    <string name="ryxs">油机当量</string>
    <string name="hqxt">回气系统</string>
    <string name="qtllcgq">气体流量传感器</string>
</resources>